// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Layout of AppToaster Check if the layout is matching with the snapshots for Arabic language 1`] = `
<DocumentFragment>
  <div
    class="text-center pt-20 pb-10 top-right"
    data-testid="Apptoaster-outer-container"
  >
    <div
      class="Toastify"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
        style="width: 400px;"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--colored Toastify__toast--default Toastify__toast--close-on-click Toastify--animate Toastify__bounce-enter--top-right"
          data-in="true"
          id="2"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div
              class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
            />
            <div>
              <div
                data-testid="AppToaster-custom-toast"
              >
                AppToaster test message
              </div>
            </div>
          </div>
          <button
            aria-label="close"
            class="Toastify__close-button Toastify__close-button--colored"
            type="button"
          >
            <svg
              aria-hidden="true"
              viewBox="0 0 14 16"
            >
              <path
                d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--colored Toastify__progress-bar--default"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--colored Toastify__progress-bar--default"
              role="progressbar"
              style="animation-duration: 1000ms; animation-play-state: paused;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Testing the Layout of AppToaster Check if the layout is matching with the snapshots for English language 1`] = `
<DocumentFragment>
  <div
    class="text-center pt-20 pb-10 top-right"
    data-testid="Apptoaster-outer-container"
  >
    <div
      class="Toastify"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
        style="width: 400px;"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--colored Toastify__toast--default Toastify__toast--close-on-click Toastify--animate Toastify__bounce-enter--top-right"
          data-in="true"
          id="1"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div
              class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
            />
            <div>
              <div
                data-testid="AppToaster-custom-toast"
              >
                AppToaster test message
              </div>
            </div>
          </div>
          <button
            aria-label="close"
            class="Toastify__close-button Toastify__close-button--colored"
            type="button"
          >
            <svg
              aria-hidden="true"
              viewBox="0 0 14 16"
            >
              <path
                d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--colored Toastify__progress-bar--default"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--colored Toastify__progress-bar--default"
              role="progressbar"
              style="animation-duration: 1000ms; animation-play-state: paused;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
